Changelog v5.1.83 (2025-03-26):
- Added Watchlist Migration Script 
- Added Wipe Addon Data Setting
- String Changes to add descriptions soon

Changelog v5.1.82 (2025-03-22):
- Small fixes to Simkl

Changelog v5.1.81 (2025-03-21):
- Recoded Watchlist Sorting
- Added Watchlist Ordering Setting

Changelog v5.1.80 (2025-03-21):
- Fixed some Watchlist Sorting Bugs

Changelog v5.1.79 (2025-03-15):
- Fixed Resolution again

Changelog v5.1.78 (2025-03-15):
- Fixed Resolution with Aniwave and H!Anime

Changelog v5.1.77 (2025-03-14):
- H!Anime does not require Mega Cloud Solver
- Modified Duplicate Sources Function

Changelog v5.1.76 (2025-03-08):
- Added FlareSolverr Support to AnimePahe

Changelog v5.1.75 (2025-03-06):
- Fixed monitor bug

Changelog v5.1.74 (2025-03-04):
- Fixed Freezing and Cache this time

Changelog v5.1.73 (2025-03-01):
- Optimized Player for Embeds
- Fixed Freezing and hopefully Cache with Player

Changelog v5.1.72 (2025-02-28):
- Added Movies, TV shows, TV Shorts Menus
- Added Specials, OVAs, ONAs Menus
- Added Music Videos, Genres, Search Menus
- Recoded Menu Customization Settings Category
- Fixed Premiumize Cloud Searching

Changelog v5.1.71 (2025-02-23):
- Added EasyDebrid

Changelog v5.1.70 (2025-02-20):
- Added New Setting "Skip UnCached Sources (Real-Debrid, AllDebrid)"
- Added more meta to last Watched
- Fixed Caching for Embeds hopefully
- Fixed Batch Search for Mal Meta

Changelog v5.1.69 (2025-02-20):
- Added Anidb Episode Meta

Changelog v5.1.68 (2025-02-17):
- Added Trakt Scrobbler Settings to Watchlist

Changelog v5.1.67 (2025-02-16):
- Improved Scraping for Animetosho
- Rescrape works as intended now

Changelog v5.1.66 (2025-02-13):
- Added Votes with Ratings for Anilist

Changelog v5.1.65 (2025-02-13):
- Fixed UpNext Stuff
- Added Some Stuff to Episode Meta
- Made Anilist Calendar load faster

Changelog v5.1.64 (2025-02-13):
- Small Fix with New Playback Setting
- Added Genres to Episode Meta

Changelog v5.1.63 (2025-02-11):