@@ -1,3 +1,6 @@
+Changelog v5.1.84 (2025-03-27):
+- Small fix to HiAnime
+
 Changelog v5.1.83 (2025-03-26):
 - Added Watchlist Migration Script 
 - Added Wipe Addon Data Setting
